chore(ci): fix actionlint

--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -444,7 +444,7 @@ jobs:
           gh release create --draft --repo ${{ github.repository }} \
           --verify-tag "${TAG}" \
           --title "${TAG} - ${HW^^}" \
-          wheels/* ./*.intoto.jsonl/* *binaries*.zip
+          wheels/* ./*.intoto.jsonl/* ./*binaries*.zip
         env:
           GH_TOKEN: ${{ github.token }}
       - name: Upload wheels to S3
