--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -58,8 +58,8 @@ jobs:
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     strategy:
       matrix:
-        # we will use 3.8 for tests, and 3.10 for docs checking (3.8 doesn't work)
-        python-version: ["3.8", "3.10"]
+        # we will use 3.8 for tests, and 3.10 for docs checking (3.8 doesn't work for now, TODO reactivate)
+        python-version: ["3.10"]
     steps:
       - name: Checkout concrete
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
