chore(ci): adapt workflows to the new docker image

--- a/.github/workflows/concrete_ml_test.yml
+++ b/.github/workflows/concrete_ml_test.yml
@@ -72,7 +72,9 @@ jobs:
           shell: bash
           run: |
             set -e
-            rm -rf /build/*
+
+            ccache -z
+            ccache -p
             
             export PYTHON=${{ format('python{0}', matrix.python-version) }}
             echo "Using $PYTHON"
