--- a/docker/Dockerfile.cuda-env
+++ b/docker/Dockerfile.cuda-env
@@ -1,7 +1,9 @@
 FROM quay.io/pypa/manylinux_2_28_x86_64:2024-02-08-a1b4ddc AS build
 
+ARG PACKAGEURL=https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda-repo-rhel8-11-8-local-11.8.0_520.61.05-1.x86_64.rpm
+
 RUN dnf install -y kernel-devel kernel-headers && dnf clean all
-RUN curl https://developer.download.nvidia.com/compute/cuda/12.3.2/local_installers/cuda-repo-rhel8-12-3-local-12.3.2_545.23.08-1.x86_64.rpm -o cuda.rpm
+RUN curl ${PACKAGEURL} -o cuda.rpm
 RUN rpm -i cuda.rpm \
     && dnf install -y epel-release \
     && dnf clean all
@@ -12,5 +14,8 @@ RUN dnf update -y \
     && dnf clean all
 
 FROM scratch
-COPY --from=build /usr/local/cuda-12.3/ /usr/local/cuda-12.3/
+
+ARG CUDAVERSION=11.8
+
+COPY --from=build /usr/local/cuda-${CUDAVERSION}/ /usr/local/cuda-${CUDAVERSION}/
 COPY --from=build /usr/lib64/libcuda.so* /usr/lib64/
