chore(ci): drop support for py3.8

--- a/.github/workflows/concrete_python_benchmark.yml
+++ b/.github/workflows/concrete_python_benchmark.yml
@@ -60,7 +60,7 @@ jobs:
           run: |
             set -e
 
-            export PYTHON=python
+            export PYTHON=python3.10
 
             cd /concrete/frontends/concrete-python
             make PYTHON=$PYTHON venv
