--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -58,8 +58,12 @@ jobs:
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     strategy:
       matrix:
-        # we will use 3.8 for tests, and 3.10 for docs checking (3.8 doesn't work for now, TODO reactivate)
-        python-version: ["3.10"]
+        # we will use 3.9 for tests, and 3.10 for docs checking
+        include:
+          - python-version: "3.9"
+            python-executable: "/opt/python/cp39-cp39/bin/python"
+          - python-version: "3.10"
+            python-executable: "/opt/python/cp310-cp310/bin/python"
     steps:
       - name: Checkout concrete
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -69,41 +73,7 @@ jobs:
       - name: Create concrete build directory
         run: mkdir build
 
-      - name: Build concrete-compiler python bindings (3.8)
-        if: ${{ matrix.python-version == '3.8' }}
-        uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
-        with:
-          registry: ghcr.io
-          image: ${{ env.DOCKER_IMAGE_TEST }}
-          username: ${{ secrets.GHCR_LOGIN }}
-          password: ${{ secrets.GHCR_PASSWORD }}
-          options: >-
-            -v ${{ github.workspace }}:/concrete
-            -v ${{ github.workspace }}/build:/build
-          shell: bash
-          run: |
-            set -e
-
-            cd /concrete/frontends/concrete-python
-            make venv
-            source .venv/bin/activate
-
-            cd /concrete/compilers/concrete-compiler/compiler
-            make BUILD_DIR=/build DATAFLOW_EXECUTION_ENABLED=ON CCACHE=ON Python3_EXECUTABLE=$(which python) python-bindings
-
-            echo "Debug: ccache statistics (after the build):"
-            ccache -s
-
-            for f in $(find /build/tools/concretelang/python_packages/concretelang_core/ -type l);
-            do
-              cp --remove-destination $(readlink -e $f) $f
-            done
-
-            cd /concrete/frontends/concrete-python
-            export COMPILER_BUILD_DIRECTORY="/build"
-            make whl
-      - name: Build concrete-compiler python bindings (3.10)
-        if: ${{ matrix.python-version == '3.10' }}
+      - name: Build concrete-compiler python bindings
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
         with:
           registry: ghcr.io
@@ -121,7 +91,7 @@ jobs:
             ccache -p
 
             cd /concrete/frontends/concrete-python
-            make PYTHON=/opt/python/cp310-cp310/bin/python venv
+            make PYTHON=${{ matrix.python-executable }} venv
             source .venv/bin/activate
 
             python -m pip install -r /concrete/third_party/llvm-project/mlir/python/requirements.txt
@@ -211,7 +181,8 @@ jobs:
     needs: [setup-instance, build-python-bindings]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     env:
-      python-version: "3.8"
+      python-version: "3.9"
+      python-executable: "/opt/python/cp39-cp39/bin/python"
     steps:
       - name: Checkout concrete
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -238,7 +209,7 @@ jobs:
             set -e
             export COMPILER_BUILD_DIRECTORY=/compiler-artifacts
             cd /concrete/frontends/concrete-python
-            make venv
+            make PYTHON=${{ env.python-executable }} venv
             source .venv/bin/activate
             export KEY_CACHE_DIRECTORY=./key-set-cache
             mkdir $KEY_CACHE_DIRECTORY
@@ -254,6 +225,9 @@ jobs:
   test-notebooks:
     needs: [setup-instance, build-python-bindings]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+    env:
+      python-version: "3.9"
+      python-executable: "/opt/python/cp39-cp39/bin/python"
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -263,7 +237,7 @@ jobs:
       - name: Download concrete-compiler python-bindings
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: concrete-compiler-python-bindings-3.8
+          name: concrete-compiler-python-bindings-${{ env.python-version }}
           path: compiler-artifacts
       - name: Run pytest
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
@@ -280,7 +254,7 @@ jobs:
             set -e
             export COMPILER_BUILD_DIRECTORY=/compiler-artifacts
             cd /concrete/frontends/concrete-python
-            make venv
+            make PYTHON=${{ env.python-executable }} venv
             source .venv/bin/activate
             make test-notebooks
       - name: Slack Notification
