feat(frontend-rust): support interop with tfhers ciphertexts

--- a/frontends/concrete-rust/Makefile
+++ b/frontends/concrete-rust/Makefile
@@ -1,8 +1,28 @@
 CARGO_SUBDIRS := concrete concrete-macro test concrete-keygen
 
-.PHONY: test
+.PHONY: test clean
 test:
 	@for dir in $(CARGO_SUBDIRS); do \
 	   echo "Running cargo test in $$dir..."; \
-	   COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo test --manifest-path $$dir/Cargo.toml || exit 1; \
+	   COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo test --all-features --manifest-path $$dir/Cargo.toml -- --nocapture || exit 1; \
 	done
+
+clean:
+	@for dir in $(CARGO_SUBDIRS); do \
+		echo "Cleaning target folder in $$dir..."; \
+		rm -rf $$dir/target || exit 1; \
+	done
+
+run:
+	cd test && \
+ 	COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo run
+
+format:
+	@for dir in $(CARGO_SUBDIRS); do \
+		echo "Running format in $$dir..."; \
+		COMPILER_BUILD_DIRECTORY=$(COMPILER_BUILD_DIRECTORY) cargo fmt --manifest-path $$dir/Cargo.toml || exit 1; \
+	done
+
+regen_test_zips:
+	python test/python/test.py
+	python test/python/test_tfhers.py
