--- a/frontends/concrete-rust/test/Cargo.toml
+++ b/frontends/concrete-rust/test/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+tfhe = "1.0"
 concrete-macro = { path = "../concrete-macro" }
 concrete = { path = "../concrete"  }
