--- a/frontends/concrete-rust/concrete-macro/Cargo.toml
+++ b/frontends/concrete-rust/concrete-macro/Cargo.toml
@@ -21,4 +21,5 @@ proc-macro2 = "1.0"
 zip = "2.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+itertools = "0.14.0"
 concrete = {  version = "2.10.1", path = "../concrete", features = ["compiler"]}
