--- a/frontends/concrete-rust/concrete/Cargo.toml
+++ b/frontends/concrete-rust/concrete/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 quote  = {version = "1.0", optional =true }
 proc-macro2 = {version = "1.0", optional = true}
+tfhe = {version = "1.1", features = ["integer"], optional = true}
 
 [build-dependencies]
 zip = "2.6"
@@ -28,4 +29,6 @@ cxx-build = "1.0"
 ar = "0.9"
 
 [features]
+default = ["tfhe-rs", "compiler"]
 compiler = ["dep:quote", "dep:proc-macro2"]
+tfhe-rs = ["dep:tfhe"]
