--- a/.github/workflows/concrete_cpu_test.yml
+++ b/.github/workflows/concrete_cpu_test.yml
@@ -21,9 +21,7 @@ jobs:
   tests-linux:
     strategy:
       fail-fast: false
-      matrix:
-        runson: ["ubuntu-20.04"]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       RUSTFLAGS: -D warnings
     steps:
