--- a/.github/workflows/commit_compliance.yml
+++ b/.github/workflows/commit_compliance.yml
@@ -28,3 +28,4 @@ jobs:
         with:
           use-quiet-mode: 'yes'
           use-verbose-mode: 'yes'
+          config-file: 'ci/markdown_link_check_config.json'
