--- a/.github/workflows/concrete_compiler_publish_docker_images.yml
+++ b/.github/workflows/concrete_compiler_publish_docker_images.yml
@@ -40,6 +40,9 @@ jobs:
   cuda-image:
     needs: [setup-instance]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+    permissions:
+      # to upload scan results
+      security-events: write
     env:
       image: ghcr.io/zama-ai/concrete/cuda
       dockerfile: docker/Dockerfile.cuda-env
@@ -102,6 +105,9 @@ jobs:
   compiler-image:
     needs: [setup-instance, cuda-image]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+    permissions:
+      # to upload scan results
+      security-events: write
     env:
       image: ghcr.io/zama-ai/concrete/compiler-ci
       dockerfile: docker/Dockerfile.concrete-compiler-env
@@ -168,6 +174,9 @@ jobs:
   compiler-image-gpu:
     needs: [setup-instance, compiler-image]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+    permissions:
+      # to upload scan results
+      security-events: write
     env:
       image: ghcr.io/zama-ai/concrete/compiler-ci-gpu
       dockerfile: docker/Dockerfile.concrete-compiler-env-gpu
