--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -65,6 +65,9 @@ jobs:
         hw: ["cpu", "gpu"]
     needs: setup-instance
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+    permissions:
+      # to push nightly tags
+      contents: write
     steps:
       - name: Set up GitHub environment
         run: |
