chore(ci): don't persist creds during checkout

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -76,11 +76,14 @@ jobs:
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
         submodules: recursive
+        persist-credentials: 'false'
         fetch-depth: 0
 
     - if: matrix.build-mode != 'manual'
       name: Checkout repository
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      with:
+        persist-credentials: 'false'
 
     - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5
       with:
