--- a/.github/workflows/concrete_compiler_test_gpu.yml
+++ b/.github/workflows/concrete_compiler_test_gpu.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+          persist-credentials: 'false'
       - name: Create build dir
         run: mkdir build
       - name: Build and test compiler
