--- a/.github/workflows/concrete_compiler_publish_docker_images.yml
+++ b/.github/workflows/concrete_compiler_publish_docker_images.yml
@@ -58,6 +58,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Set up env
         run: |
           echo "HOME=/home/ubuntu" >> "${GITHUB_ENV}"
@@ -110,6 +111,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+          persist-credentials: 'false'
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@bab30c2299617f6615ec02a68b9a40d10bd21366 # v44.5.24
@@ -176,6 +178,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+          persist-credentials: 'false'
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@bab30c2299617f6615ec02a68b9a40d10bd21366 # v44.5.24
