--- a/.github/workflows/concrete_optimizer.yml
+++ b/.github/workflows/concrete_optimizer.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: 'false'
       - name: Setup
         uses: ./.github/actions/optimizer_setup
       - name: Formatting
@@ -66,6 +68,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: 'false'
       - name: Setup
         uses: ./.github/actions/optimizer_setup
       - name: Run benchmark
