--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Avoid releasing nightly twice
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
         run: |
@@ -74,6 +75,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Set release version (nightly)
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
         run: |
@@ -215,6 +217,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Setup Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
@@ -258,6 +261,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Install OS Dependencies
         run: |
           brew install ninja ccache
@@ -413,6 +417,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+          persist-credentials: 'false'
       - uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           path: wheels
@@ -494,6 +499,7 @@ jobs:
         with:
           submodules: recursive
           path: repo
+          persist-credentials: 'false'
       - name: Test wheel
         run: |
           WHEEL_DIR=$(pwd)/${{ format('cpu-wheel-{0}-linux-x86', matrix.python-version) }}/
@@ -610,6 +616,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           path: repo
+          persist-credentials: 'false'
 
       - name: Test wheel
         run: |
@@ -679,6 +686,7 @@ jobs:
         with:
           submodules: recursive
           path: repo
+          persist-credentials: 'false'
       - name: Test wheel
         run: |
           WHEEL_DIR=$(pwd)/${{ format('cpu-wheel-{0}-{1}', matrix.python-version, matrix.runs-on) }}/
