--- a/.github/workflows/concrete_python_test_macos.yml
+++ b/.github/workflows/concrete_python_test_macos.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          persist-credentials: 'false'
       - name: Install build dependencies
         run: |
           brew install ninja ccache
