--- a/.github/workflows/refresh_zama_pypi.yml
+++ b/.github/workflows/refresh_zama_pypi.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v3
+        with:
+          persist-credentials: 'false'
 
       - name: Update index and invalidate cache
         env:
