--- a/.github/workflows/concrete_optimizer.yml
+++ b/.github/workflows/concrete_optimizer.yml
@@ -65,6 +65,9 @@ jobs:
 
   benchmarks:
     runs-on: ubuntu-latest
+    permissions:
+      # to comment the benchmark result in the PR
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
