--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -516,6 +516,7 @@ jobs:
           # Install extra requirements for tests
           sudo apt update -y
           sudo apt install -y graphviz libgraphviz-dev
+          sudo apt install -y capnproto
           pip install -r "${CONCRETE_PYTHON}"/requirements.extra-full.txt
           pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
 
@@ -529,8 +530,7 @@ jobs:
 
           # Running tests
           make tfhers-utils
-          # FIXME: failing since capnp isn't available
-          make CONCRETE_KEYGEN_DIRECTORY="${CONCRETE_KEYGEN_DIR}" concrete-rust-keygen || true # continue if we can't build
+          make CONCRETE_KEYGEN_DIRECTORY="${CONCRETE_KEYGEN_DIR}" concrete-rust-keygen
           pytest tests -svv -n auto
       - name: Slack Notification
         if: ${{ failure() }}
@@ -705,6 +705,7 @@ jobs:
           # Install extra requirements for tests
           pip install "${WHEEL_DIR}"/*macos*.whl
           pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
+          brew install capnp
 
           "${CONCRETE_PYTHON}"/../../.github/workflows/scripts/fix_multi_omp_bug_macos.sh
 
@@ -719,8 +720,7 @@ jobs:
 
           # Running tests
           make tfhers-utils
-          # FIXME: failing since capnp isn't available
-          make CONCRETE_KEYGEN_DIRECTORY="${CONCRETE_KEYGEN_DIR}" concrete-rust-keygen || true # continue if we can't build
+          make CONCRETE_KEYGEN_DIRECTORY="${CONCRETE_KEYGEN_DIR}" concrete-rust-keygen
           mkdir ./KeySetCache
           pytest tests -svv -n auto --key-cache "./KeySetCache" -m "not dataflow and not graphviz"
       - name: Cleanup host
