feat(ci): release concrete-keygen

--- a/frontends/concrete-rust/concrete-keygen/Cargo.toml
+++ b/frontends/concrete-rust/concrete-keygen/Cargo.toml
@@ -4,7 +4,7 @@ name = "concrete-keygen"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
-readme = "../../../README.md"
+readme = "./README.md"
 homepage = "https://zama.ai/"
 documentation = "https://docs.zama.ai/concrete"
 repository = "https://github.com/zama-ai/concrete"
