chore(ci): add ci workflow for concrete-rust tests

--- a/frontends/concrete-rust/Makefile
+++ b/frontends/concrete-rust/Makefile
@@ -1,10 +1,12 @@
 CARGO_SUBDIRS := concrete concrete-macro test concrete-keygen
+COMPILER_BUILD_DIRECTORY := ../../../compilers/concrete-compiler/compiler/build
 
-.PHONY: test clean
+.PHONY: test clean run pcc
+
 test:
 	@for dir in $(CARGO_SUBDIRS); do \
-	   echo "Running cargo test in $$dir..."; \
-	   COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo test --all-features --manifest-path $$dir/Cargo.toml -- --nocapture || exit 1; \
+		echo "Running cargo test in $$dir..."; \
+		COMPILER_BUILD_DIRECTORY=$(COMPILER_BUILD_DIRECTORY) cargo test --all-features --manifest-path $$dir/Cargo.toml -- --nocapture || exit 1; \
 	done
 
 clean:
@@ -13,9 +15,21 @@ clean:
 		rm -rf $$dir/target || exit 1; \
 	done
 
+clear_locks :
+	@for dir in $(CARGO_SUBDIRS); do \
+		echo "Cleaning lock in $$dir..."; \
+		rm -rf $$dir/Cargo.lock || exit 1; \
+	done
+
 run:
 	cd test && \
- 	COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo run
+		COMPILER_BUILD_DIRECTORY=$(COMPILER_BUILD_DIRECTORY) cargo run
+
+pcc:
+	@for dir in $(CARGO_SUBDIRS); do \
+		echo "Running pcc in $$dir..."; \
+		COMPILER_BUILD_DIRECTORY=$(COMPILER_BUILD_DIRECTORY) cargo check --all-features --manifest-path $$dir/Cargo.toml || exit 1; \
+	done
 
 format:
 	@for dir in $(CARGO_SUBDIRS); do \
@@ -24,5 +38,6 @@ format:
 	done
 
 regen_test_zips:
-	python test/python/test.py
-	python test/python/test_tfhers.py
+	cd test/src && \
+	python ../python/test.py && \
+	python ../python/test_tfhers.py
