--- a/frontends/concrete-rust/concrete-macro/Cargo.toml
+++ b/frontends/concrete-rust/concrete-macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "concrete-macro"
-version = "2.10.1"
+version = "0.0.0"
 edition = "2021"
 readme = "../../../../../../../README.md"
 keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
@@ -22,4 +22,4 @@ zip = "2.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 itertools = "0.14.0"
-concrete = {  version = "2.10.1", path = "../concrete", features = ["compiler"]}
+concrete = {  version = "=0.0.0", path = "../concrete", features = ["compiler"]}
