--- a/frontends/concrete-rust/concrete/Cargo.toml
+++ b/frontends/concrete-rust/concrete/Cargo.toml
@@ -18,12 +18,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 quote  = {version = "1.0", optional =true }
 proc-macro2 = {version = "1.0", optional = true}
+libc = "0.2"
 tfhe = {version = "1.1", features = ["integer"], optional = true}
 
 [build-dependencies]
 zip = "2.4"
 curl = "0.4.47"
 cxx-build = "1.0"
+libc = "0.2"
 
 [dev-dependencies]
 ar = "0.9"
