--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -520,7 +520,7 @@ jobs:
           # Install extra requirements for tests
           sudo apt update -y
           sudo apt install -y graphviz libgraphviz-dev
-          sudo apt install -y capnproto
+          sudo apt install -y capnproto libcapnp-dev
           pip install -r "${CONCRETE_PYTHON}"/requirements.extra-full.txt
           pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
 
